syntax = "proto3";

option csharp_namespace = "GameDevsConnect.Backend.API.User.gRPC.Services";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package user;

service UserProtoService
{
	rpc GetIds(google.protobuf.Empty) returns (GetUserIdsResponse)
	{
		option (google.api.http) = {
			get: "/user"
		};
	}

	rpc GetExist(IdRequest) returns (Response)
	{
		option (google.api.http) = {
			get: "/user/exist/{id}"
		};
	}

	rpc GetFollowerCount(IdRequest) returns (GetCountResponse)
	{
		option (google.api.http) = {
			get: "/user/follower/count/{id}"
		};
	}

	rpc GetFollowingCount(IdRequest) returns (GetCountResponse)
	{
		option (google.api.http) = {
			get: "/user/following/count/{id}"
		};
	}

	rpc GetFollowerIds(IdRequest) returns (GetUserIdsResponse)
	{
		option (google.api.http) = {
			get: "/user/follower/{id}"
		};
	}

	rpc GetFollowingIds(IdRequest) returns (GetUserIdsResponse)
	{
		option (google.api.http) = {
			get: "/user/following/{id}"
		};
	}

	rpc GetIdsByProjectId(IdRequest) returns (GetUserIdsResponse)
	{
		option (google.api.http) = {
			get: "/user/project/{id}"
		};
	}

	rpc Get(GetUserRequest) returns (User)
	{
		option (google.api.http) = {
			get: "/user/{id}"
		};
	}

	rpc Create(CreateUserRequest) returns (UserId)
	{
		option (google.api.http) = {
			post: "/user/add",
			body: "*"
		};
	}

	rpc Update(UpdateUserRequest) returns (Response)
	{
		option (google.api.http) = {
			put: "/user/update",
			body: "*"
		};
	}

	rpc Delete(IdRequest) returns (Response)
	{
		option (google.api.http) = {
			delete: "/user/delete/{id}"
		};
	}

}

message User
{
	string id = 1;
	string loginId = 2;
	string username = 3;
	string avatar = 4;
	string accountType = 5;
}

message UserId
{
	string id = 1;
}

message GetUserIdsResponse
{
	repeated string ids = 1;
}

message GetCountResponse
{
	int32 count = 1;
}

message Response
{
	bool status = 1;
}

message GetUserRequest
{
	string id = 1;
}

message CreateUserRequest
{
	User user = 1;
}

message UpdateUserRequest
{
	User user = 1;
}

message IdRequest
{
	string id = 1;
}